# genesis-agentic-app-project

./: README.md  genesis-platform.jsx
genesis agent/: README.md  __init__.py  config.py  dependencies.py  docker-compose.yml  main.py  models.py  pyproject.toml
genesis agent exe/genesis-ai-platform/: Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
genesis agent exe/genesis-ai-platform/backend/: Dockerfile  pyproject.toml
genesis agent exe/genesis-ai-platform/backend/alembic/: init.sql
genesis agent exe/genesis-ai-platform/backend/app/: __init__.py  config.py  database.py  dependencies.py
genesis agent exe/genesis-ai-platform/backend/app/agents/: engine.py
genesis agent exe/genesis-ai-platform/backend/app/genetic/: evolution_engine.py
genesis agent exe/genesis-ai-platform/backend/app/memory/: memory_system.py
genesis agent exe/genesis-ai-platform/backend/app/schemas/: __init__.py
genesis agent exe/genesis-ai-platform/backend/tests/: test_api.py
genesis agent exe/genesis-ai-platform/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
genesis agent exe/genesis-ai-platform/frontend/src/: App.jsx  api.js
genesis agent exe/genesis-ai-platform/scripts/: seed.py
genesis-ai-platform/: 01_MASTER_PROJECT_PLAN.md  02_SYSTEM_ARCHITECTURE.md  03_TECHNICAL_SPECIFICATION.md  04_WORKSPACE_WORKFLOW.md  05_MEMORY_SYSTEM_DESIGN.md  06_GENETIC_EVOLUTION_ENGINE.md  07_AGENT_SKILLS_CATALOG.md  08_SKILL_BUILDER_AGENT.md
