[project]
name = "genesis-ai-platform"
version = "0.1.0"
description = "GENESIS — Genetic Evolution Network with Episodic & Semantic Intelligence System"
requires-python = ">=3.11"
dependencies = [
    # Agent Framework
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",

    # LLM Providers
    "anthropic>=0.42.0",
    "openai>=1.60.0",

    # Vector Database
    "qdrant-client>=1.12.0",

    # Graph Database
    "neo4j>=5.25.0",

    # Cache & Message Bus
    "redis[hiredis]>=5.2.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",

    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.9",

    # Embeddings
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",

    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
